--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 
         <!-- melonJS Library -->
         <!-- build:js js/app.min.js -->
-        <script type="text/javascript" src="lib/melonJS-2.1.3.js"></script>
+        <script type="text/javascript" src="lib/melonJS.js"></script>
 
         <!-- Plugin(s) -->
         <script type="text/javascript" src="lib/plugins/debug/debugPanel.js"></script>
