Added some information

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
         <link rel="manifest" href="manifest.json">
     </head>
     <body>
-		 <div class="div-sidebar"><button onclick="window.scrollTo(0, 500);">Find instructions below</button></div>
+		 <div class="div-sidebar"><button onclick="window.scrollTo(0, 1000);">Find information below</button></div>
         <!-- Canvas placeholder -->
         <div id="screen"></div>
 
@@ -31,6 +31,23 @@
 						<li>Run: left and right</li>
 						<li>Block: If you are attacked while blocking, you wont loose any health but your blocking will stop immediately.</li>
 					</ul>
+			</ul>
+
+			<h1>Contributions:</h1>
+			<ul>
+				<li>Dwarf sprites: <a href="http://opengameart.org/content/delve-deeper-dwarves">http://opengameart.org/content/delve-deeper-dwarves</a></li>
+				<li>Level tiles: <a href="http://opengameart.org/content/pixel-art-castle-tileset">http://opengameart.org/content/pixel-art-castle-tileset</a></li>
+				<li>Music</li>
+				<ul>
+					<li>Title screen: We're the Resistors by Eric Skiff: <a href="http://ericskiff.com/music/">http://ericskiff.com/music/</a></li>
+					<li>In game music: Ferrous Rage by Ozzed (Album: Cor Metallicum): <a href="http://ozzed.net/music/">http://ozzed.net/music/</a></li>
+				</ul>
+			</ul>
+
+			<h1>Technical details:</h1>
+			<ul>
+				<li>FightOfDwarves has been realized with <a target="_blank" href="http://melonjs.org/">MelonJS</a>, which <q>is a lightweight but yet powerful HTML5 framework designed from the ground up to provide a true plugin-free 'write-once, run-everywhere' gaming oriented library.</q></li>
+				<li>Loosely based on this tutorial: <a href="http://melonjs.github.io/tutorial-platformer/">http://melonjs.github.io/tutorial-platformer/</a></li>
 			</ul>
 		</div>
 
