Removed song Highway Slaughter to save space

--- a/index.html
+++ b/index.html
@@ -14,16 +14,16 @@
         <link rel="manifest" href="manifest.json">
     </head>
     <body>
-		 <div class="div-sidebar"><button onclick="window.scrollTo(0, 1000);">Find information below</button></div>
+		 <div class="div-sidebar"><button onclick="window.scrollTo(0, 1000);"><b>?</b></button></div>
         <!-- Canvas placeholder -->
         <div id="screen"></div>
 
 	 	<div class="div-info">
 			<h1>Instructions:</h1>
 			<ul>
-				<li>Press F11 for fullscreen</li>
-				<li>Change player controls: Navigate to player and press enter. Press buttons for displayed actions. Attention: There is no check if buttons are assigned multiple times!</li>
-				<li>Gamepad support: Simply plug in your gamepads. The input will be mapped automatically to the player keys.</li>
+				<li>Press <b>F11</b> for fullscreen</li>
+				<li>Attention: When changing player controls there is no check if buttons are assigned multiple times (yet)!</li>
+				<li><b>Gamepad</b> support: Simply plug in your gamepads. The input will be mapped automatically to the player keys.</li>
 				<li>Dwarves can:
 					<ul>
 						<li>Attack</li>
@@ -46,6 +46,7 @@
 
 			<h1>Technical details:</h1>
 			<ul>
+				<li>GitHub repository: <a href="https://github.com/mbarde/fightOfDwarves">https://github.com/mbarde/fightOfDwarves</a></li>
 				<li>FightOfDwarves has been realized with <a target="_blank" href="http://melonjs.org/">MelonJS</a>, which <q>is a lightweight but yet powerful HTML5 framework designed from the ground up to provide a true plugin-free 'write-once, run-everywhere' gaming oriented library.</q></li>
 				<li>Loosely based on this tutorial: <a href="http://melonjs.github.io/tutorial-platformer/">http://melonjs.github.io/tutorial-platformer/</a></li>
 			</ul>
